environments/gloo-edge/gateway-api/portal-only/gloo-portal-demo/base/openlibrary/openlibrary-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: openlibrary-route
  namespace: bookinfo
  labels:
    example: openlibrary-route
    gateway: https
spec:
  hostnames:
  - "openlibrary.glootest.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - group: gloo.solo.io
          kind: Upstream
          name: openlibrary
          port: 443
      #filters:
      #- type: ExtensionRef
      #  extensionRef:
      #    group: gateway.solo.io
      #    kind: RouteOption
      #    name: openlibrary-route-policies
